tests/baselines/reference/discriminantsAndTypePredicates.errors.txt
discriminantsAndTypePredicates.ts(27,9): error TS2845: This condition will always return 'true'.


==== discriminantsAndTypePredicates.ts (1 errors) ====
    // Repro from #10145
    
    interface A { type: 'A' }
    interface B { type: 'B' }
    
    function isA(x: A | B): x is A { return x.type === 'A'; }
    function isB(x: A | B): x is B { return x.type === 'B'; }
    
    function foo1(x: A | B): any {
        x;  // A | B
        if (isA(x)) {
            return x;  // A
        }
        x;  // B
        if (isB(x)) {
            return x;  // B
        }
        x;  // never
    }
    
    function foo2(x: A | B): any {
        x;  // A | B
        if (x.type === 'A') {
            return x;  // A
        }
        x;  // B
        if (x.type === 'B') {
            ~~~~~~~~~~~~~~
!!! error TS2845: This condition will always return 'true'.
            return x;  // B
        }
        x;  // never
    }